# reforger

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MODS.md  README.md  addon.gproj  generate_shop_configs.py  main.py  mods.py  pyproject.toml  resourceDatabase.rdb
AUADeadEveron/: CLAUDE.md  README.md  addon.gproj  resourceDatabase.rdb
AUADeadEveron/Missions/: AUA_DeadEveron.conf
AUADeadEveron/UI/PDA/: HUD_PDA.layout
AUADeadEveron/Worlds/: mptest.ent
AUADeadEveron/Worlds/mptest_Layers/: default.layer
AUADeadEveron/configs/NameTags/: NametagFriendlies.conf
AUADeadEveron/configs/STARTING/: stalker_starting.conf
AUADeadEveron/configs/Systems/: ChimeraSystemsConfig.conf
AUADeadEveronDeltaT/: addon.gproj  resourceDatabase.rdb
AUADeadEveronDeltaT/Missions/: ArmAUkraineDeadEveron.conf
AUADeadEveronDeltaT/UI/: badge_color.edds  badge_monochrome.edds  screenshot1.edds  screenshot2.edds  screenshot3.edds
AUADisableGMBudgets/: addon.gproj
AUAFFPlusTweaks/: addon.gproj  resourceDatabase.rdb  validate_prices.py
AUAFFTweaked/: MAGAZINE_HANDLER_USAGE.md  addon.gproj  resourceDatabase.rdb  validate_prices.py
PrefabLibrary/Groups/: Group_Zombies_CIV.et  Group_Zombies_CIV_4.et  Group_Zombies_CIV_Large.et  Group_Zombies_High.et  Group_Zombies_Horde.et
PrefabLibrary/Resources/: ammo.et  medicine.et  tools.et
Prefabs/Groups/: Group_Zombies_CIV_4.et
Prefabs/Items/: Wallet.et
Scripts/Game/: AUA_DeletePrefabsOnStart.c  DeletePrefabsOnStart.c
UI/PDA/: HUD_PDA.layout
configs/ArsenalShops/: AUA_SHOP_Cooking.conf  AUA_SHOP_Currency.conf  AUA_SHOP_Postman.conf  AUA_SHOP_PostmanIntel.conf  AUA_SHOP_Water.conf
configs/Factions/: Faction_ARMY.conf  Faction_STALKER.conf  US.conf
configs/NameTags/: NametagFriendlies.conf  NametagSingle.conf
configs/STARTING/: stalker_starting.conf
configs/Shops/: Cooking.conf  Currency.conf  Postman.conf  PostmanIntel.conf  Water.conf
configs/Systems/: ChimeraSystemsConfig.conf
docs/: prices.md
missions/: ArmAUkraineDeadEveron.conf
src/economy/: generator.py  items.py  recipes.py  shops.py
worlds/: ShopTest.ent  Unnamed.ent  alfazone_game_mission.ent
worlds/ArmAUkraineDeadEveron_Layers/: GameMaster.layer  GameMode.layer  Logic.layer  MainBase.layer  default.layer
worlds/GMTest_Layers/: default.layer
worlds/SFTest_Layers/: default.layer
worlds/ShopTest_Layers/: default.layer
worlds/Unnamed_Layers/: default.layer
worlds/alfazone_game_mission_Layers/: default.layer
worlds/mptest_Layers/: default.layer
worlds/test_Layers/: default.layer
worlds/unnamed_Layers/: default.layer
(+153 files in other folders)
