[project]
name = "aua-dead-everon"
version = "0.1.0"
description = "Shop configuration generator for ArmA Ukraine Dead Everon mod"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "DiRaven"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src", "generate_shop_configs.py"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Windows"
