[project]
name = "addons"
version = "0.1.0"
description = "ArmA Reforger Addons"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "diskcache>=5.6.3",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20250913",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = ["**/*.py"]
exclude = [
    "**/__pycache__",
    ".*"
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "__pycache__",
    ".*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "ruff>=0.13.0",
]
